--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "form-data": "^4.0.0",
         "mime-db": "^1.52.0",
         "mime-types": "^2.1.35",
+        "moment": "^2.29.4",
         "nodemon": "^2.0.22",
         "proxy-from-env": "^1.1.0",
         "simple-oauth2": "^5.0.0",
