--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     },
     "scripts": {
         "dev": "nodemon index.js",
-        "start": "node index.js",
-        "postinstall": "prisma generate && prisma migrate deploy"
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "",
